examples/errors/parsing/type_record_like-empty-payload.cn
type Pair(a, b) = { MkPair : }

main : () [impure] = ()
